app-menu-control spacing fix

--- a/rnt-connect-theme.css
+++ b/rnt-connect-theme.css
@@ -958,7 +958,7 @@ footer {
 
 /* Menu Control */
 .app-menu-control {
-    padding: var(--space-m);
+    padding: var(--space-s) var(--space-base);
     border-bottom: var(--border-size-s) solid var(--color-border-default);
     text-align: right;
     color: var(--color-primary);
